Se subio el código visto en clase de como consumir el web service de sicenet desde Android y con retrofit

--- a/basic-android-kotlin-compose-training-mars-photos-coil-starter/app/src/main/AndroidManifest.xml
+++ b/basic-android-kotlin-compose-training-mars-photos-coil-starter/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:usesCleartextTraffic="true"
         android:name=".MarsPhotosApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
