--- a/MiLocalizacionYMapasB/app/src/main/AndroidManifest.xml
+++ b/MiLocalizacionYMapasB/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!-- Required only when requesting background location access on
+     Android 10 (API level 29) and higher. -->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
