Ya carga un mapa de google maps en la app Se configuro el proyecto para utikllizar el sdk de mapas de android de google.
RECUERDEN QUE PARA PROBAR DEBERIAN GENER SU PROPIA CLAVE DE API

--- a/MiLocalizacionYMapasB/app/src/main/AndroidManifest.xml
+++ b/MiLocalizacionYMapasB/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
      Android 10 (API level 29) and higher. -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -23,6 +26,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiLocalizacionYMapasB"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
