--- a/MiLocalizacionYMapasB/gradle/libs.versions.toml
+++ b/MiLocalizacionYMapasB/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2023.08.00"
 accompanistPermissions = "0.35.0-alpha"
 playServicesLocation = "21.2.0"
 kotlinxCoroutinesPlayServices = "1.8.1-Beta"
+playServicesMaps = "18.2.0"
+mapsCompose = "4.3.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +32,10 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanistPermissions" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutinesPlayServices" }
+kotlinx-play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "kotlinxCoroutinesPlayServices" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
+maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "mapsCompose" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
